# fitsviewer

./: .gitignore  pyproject.toml  requirements.txt
docs/: Makefile  theory.rst  theosetup.rst  using.rst
docs/Figures/: sim_overview.cvd
fitsviewer/: README.rst  pyproject.toml  pyproject_poetry.toml  requirements.txt
fitsviewer/docs/: CONTRIBUTING.rst  conf.py  index.rst  installing.rst  make.bat
fitsviewer/src/fitsviewer/: __init__.py  __meta__.py  exec_fv.py  fits_viewer.py
fitsviewer/src/spherex_ices_simulator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fitsviewer/: __init__.py  __meta__.py  exec_fv.py  fitsviewer.py
src/fitsviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
