[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fitsviewer"
version = "0.1.0"
description = "fitsviewer"
authors = [{name="vtcloud"}]
readme = "README.rst"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]  # ["*"] by default
exclude = ["fitsviewer*tests*"]

[tool.setuptools.package-data]
"*" = ["*.dat", "*.txt"]

[project.optional-dependencies]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
fv = "fitsviewer.exec_fv:exec_fv"

[project.urls]
"Homepage" = "https://github.com/vtcloud/fitsviewer"
"Bug Tracker" = "https://github.com/vtcloud/fitsviewer/issues"